--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Homework 11</title>
   </head>
   <body>
-
+    <div class="search-form__container">
     <form class="search-form" id="search-form">
       <input
         type="text"
@@ -15,9 +16,11 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit">
+        <span class="material-icons">search</span>
+      </button>
     </form>
-
+  </div>
     <button type="button" class="load-more">Load more</button>
 
     <div class="gallery">
