--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Homework 11</title>
   </head>
   <body>
     <div class="search-form__container">
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">
-        <span class="material-icons">search</span>
-      </button>
-    </form>
-  </div>
-    <button type="button" class="load-more">Load more</button>
-
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">
+          <span class="material-icons">search</span>
+        </button>
+      </form>
+    </div>
+    <div class="status-bar">Loaded page: 1</div>
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
 
+    <!-- status elements -->
+    <div class="page-load-status">
+      <div class="loader-ellips infinite-scroll-request">
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+      </div>
+      <p class="infinite-scroll-last">End of content</p>
+      <p class="infinite-scroll-error">No more pages to load</p>
+    </div>
+
+    <!-- pagination has path -->
+<!-- <p class="pagination">
+  <a class="pagination__next" href="index.html">Next page</a>
+</p> -->
+<button type="button" class="load-more">Load more...</button>
+<p class="end-of-search">--- end of search ---</p>
     <script src="index.js" type="module"></script>
   </body>
 </html>
