--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <!-- status elements -->
-    <div class="page-load-status">
+    <!-- <div class="page-load-status">
       <div class="loader-ellips infinite-scroll-request">
         <span class="loader-ellips__dot"></span>
         <span class="loader-ellips__dot"></span>
@@ -39,14 +39,14 @@
       </div>
       <p class="infinite-scroll-last">End of content</p>
       <p class="infinite-scroll-error">No more pages to load</p>
-    </div>
+    </div> -->
 
     <!-- pagination has path -->
-<!-- <p class="pagination">
+    <!-- <p class="pagination">
   <a class="pagination__next" href="index.html">Next page</a>
 </p> -->
-<button type="button" class="load-more">Load more...</button>
-<p class="end-of-search">--- end of search ---</p>
+    <button type="button" class="load-more">Load more...</button>
+    <p class="end-of-search">--- end of search ---</p>
     <script src="index.js" type="module"></script>
   </body>
 </html>
