--- a/src/index.html
+++ b/src/index.html
@@ -29,23 +29,9 @@
       <!-- Карточки изображений -->
     </div>
 
-    <!-- status elements -->
-    <!-- <div class="page-load-status">
-      <div class="loader-ellips infinite-scroll-request">
-        <span class="loader-ellips__dot"></span>
-        <span class="loader-ellips__dot"></span>
-        <span class="loader-ellips__dot"></span>
-        <span class="loader-ellips__dot"></span>
-      </div>
-      <p class="infinite-scroll-last">End of content</p>
-      <p class="infinite-scroll-error">No more pages to load</p>
-    </div> -->
-
-    <!-- pagination has path -->
-    <!-- <p class="pagination">
-  <a class="pagination__next" href="index.html">Next page</a>
-</p> -->
-    <button type="button" class="load-more">Load more...</button>
+    <button type="button" class="load-more">
+      <img src="./images/loading.gif" width="300" alt="" />
+    </button>
     <p class="end-of-search">--- end of search ---</p>
     <script src="index.js" type="module"></script>
   </body>
